--- a/index.html
+++ b/index.html
@@ -45,15 +45,15 @@
   <!-- Template do Formulário -->
   <template id="form-template">
     <div class="mb-3">
-      <label for="nome" class="form-label">Nome</label>
+      <label for="nome" class="form-label">Comida favorita</label>
       <input type="text" class="form-control" name="nome" required>
     </div>
     <div class="mb-3">
-      <label for="endereco" class="form-label">Endereço</label>
+      <label for="endereco" class="form-label">Cor favorita</label>
       <input type="text" class="form-control" name="endereco" required>
     </div>
     <div class="mb-3">
-      <label for="telefone" class="form-label">Telefone</label>
+      <label for="telefone" class="form-label">Animal favorito</label>
       <input type="tel" class="form-control" name="telefone" required>
     </div>
   </template>
